RMB-785: WIP maven module GenerateRunner